--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/inventory
 spring.datasource.username=Merdan
 spring.datasource.password=353062
 spring.jpa.hibernate.ddl-auto=create-drop
-
-server.port=8082
+server.port=0
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.application.name=inventory-service
