--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/orders
 spring.datasource.username=Merdan
 spring.datasource.password=353062
 spring.jpa.hibernate.ddl-auto=update
-
 server.port=8081
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+spring.application.name=order-service
 
