--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
     <module>product-service</module>
     <module>order-service</module>
     <module>inventory-service</module>
+      <module>discovery-server</module>
+      <module>api-gateway</module>
   </modules>
 
   <name>microservices-new</name>
@@ -30,6 +32,7 @@
     <java.version>17</java.version>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
+    <spring-cloud.version>2021.0.2</spring-cloud.version>
   </properties>
 
   <dependencyManagement>
@@ -38,6 +41,13 @@
         <groupId>org.testcontainers</groupId>
         <artifactId>testcontainers-bom</artifactId>
         <version>1.19.0</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
