--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
     <module>inventory-service</module>
       <module>discovery-server</module>
       <module>api-gateway</module>
+      <module>notification-service</module>
+    <module>notification-service</module>
+    <module>notification-service</module>
   </modules>
 
   <name>microservices-new</name>
